--- a/_posts/2026/02/2026-02-12-Zechariah-8.md
+++ b/_posts/2026/02/2026-02-12-Zechariah-8.md
@@ -9,8 +9,8 @@ This chapter is exceptionally hopeful as it started with the remembrance of how 
 
 However, there’s a condition in this restoration.
 
-> New Revised Standard Version: Updated Edition Zechariah 8
-> . 16 These are the things that you shall do: speak the truth to one another, render in your gates judgments that are true and make for peace, 17 do not devise evil in your hearts against one another, and love no false oath, for all these are things that I hate, says the LORD.”
+## New Revised Standard Version: Updated Edition Zechariah 8:16-17
+> These are the things that you shall do: speak the truth to one another, render in your gates judgments that are true and make for peace, 17 do not devise evil in your hearts against one another, and love no false oath, for all these are things that I hate, says the LORD.”
 
 This is a manifestation of one who is truly repentant and is serious about seeking the Lord, our God so it is the work of obedience and from faith out of love in response to God’s mercy and faithfulness.
 
