--- a/_posts/2026/02/2026-02-19-Zechariah-12.md
+++ b/_posts/2026/02/2026-02-19-Zechariah-12.md
@@ -6,15 +6,17 @@ tag: Zechariah
 
 ## Background 
 ### Hadad-Rimmon
-
-
 > The NET Bible First Edition Notes Notes for  12:11
-> 17 tn “Hadad-Rimmon” is a compound of the names of two Canaanite deities, the gods of storm and thunder respectively. The grammar (a subjective genitive) allows, and the problem of comparing Israel’s grief at God’s “wounding” with pagan mourning seems to demand, that this be viewed as a place name, perhaps where Judah lamented the death of good king Josiah (cf. 2 Chr 35:25). However, some translations render this as “for” (NRSV, NCV, TEV, CEV), suggesting a person, while others translate as “of” (KJV, NAB, NASB, NIV, NLT) which is ambiguous.
+> 17 tn “Hadad-Rimmon” is a compound of the names of two Canaanite deities, the gods of storm and thunder respectively. The grammar (a subjective genitive) allows, and the problem of comparing Israel’s grief at God’s “wounding” with pagan mourning seems to demand, that this be viewed as a place name, perhaps where Judah lamented the death of good king Josiah (cf. 2 Chr 35:25). However, some translations render this as “for” (NRSV, NCV, TEV, CEV), suggesting a person, while others translate as “of” (KJV, NAB, NASB, NIV, NLT) which is ambiguous.[^2]
+
+### Zechariah 12:12–14
+> These verses picture the universality and intensity of the nation’s future mourning. David had a son named Nathan (2 Sam. 5:14) and Levi had a grandson named Shimei (Num. 3:17–18). There was also a Nathan who was a prophet in David’s time (cf. 2 Sam. 7:1–17).   V 1, p 1568  Thus the mention of the house of David … the house of Nathan … the house of Levi, and clan of Shimei may refer to the repentance (and guilt) of **kings, prophets, and priests**; or if the Nathan referred to is David’s son, then just the royal and priestly families are specified. The phrase each clan by itself, with their wives by themselves seems to indicate the individuality and thus the sincerity of the mourning rather than a mere outward conformity.[^3]
+
 
 ## Bibliography :
 1. New Revised Standard Version: Updated Edition. 2021. Friendship Press.
-2. Biblical Studies Press. 2005. The NET Bible First Edition; Bible. English. NET Bible.; The NET Bible. Biblical Studies Press.
-3. Matthews, Victor Harold, Mark W. Chavalas, and John H. Walton. 2000. The IVP Bible Background Commentary: Old Testament. Electronic ed. Downers Grove, IL: InterVarsity Press.
+[^2]Biblical Studies Press. 2005. The NET Bible First Edition; Bible. English. NET Bible.; The NET Bible. Biblical Studies Press.
+[^3]Lindsey, F. Duane. 1985. “Zechariah.” In The Bible Knowledge Commentary: An Exposition of the Scriptures, edited by J. F. Walvoord and R. B. Zuck, 1:1567–68. Wheaton, IL: Victor Books.
 
 ## Devotional meditation
 This chapter is repeating the theme in the book of Zechariah which is the restoration of Israel & His people and the prophecy of the Messiah. The oracle here talks about a group of people or nations that shall come against Jerusalem to conquer it or to besiege it. From history, it is known that multiple empires were hostile to the nation of Israel & each time there’s a different empire that overthrown them. The most recent one in the timeline of Zechariah was the Persian empire that overthrown the Babylonian empire. Zechariah’s calling was to urge the Israelites to return to Jerusalem & rebuild the temple in Jerusalem, hence the repetition of the same message to encourage the remnants of Israel after the fall of the Babylonian empire. 
